--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-qS4oH2ppGv3l3jIJSvU3m2m3nq3v0q8qVQY2qBq0FZtDkC1fHf6bqfP1nS5pQf1Z" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="{% static 'css/theme.css' %}" rel="stylesheet">
-  <style nonce="{{ request.csp_nonce }}">
+  <style>
     body { min-height: 100vh; }
   </style>
 </head>
@@ -70,7 +70,7 @@
 {% else %}
   </main>
 {% endif %}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-nx0w0qvYjZZ8Vxq7X2J2q2pLxkq4kQe9v0b+R6FZV1mA9i2w3e5j8k1q2r3s4t5u" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
