--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,11 @@
   <title>{% block title %}TKA Dashboard{% endblock %}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="{% static 'css/theme.css' %}" rel="stylesheet">
   <style>
-    body { min-height: 100vh; }
+    body { min-height: 100vh; font-family:'Plus Jakarta Sans', system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif; }
   </style>
 </head>
 <body class="{% if not request.user.is_authenticated %}no-sidebar{% endif %}">
@@ -33,13 +33,12 @@
       <ul class="nav nav-pills flex-column">
         <li class="nav-item"><a class="nav-link text-white" href="{% url 'dashboard' %}">Dashboard</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="{% url 'company_list' %}">Perusahaan</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="{% url 'worker_list' %}">Pekerja</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="{% url 'document_list' %}">Dokumen</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="{% url 'worker_list' %}">Pekerja & Dokumen</a></li>
       </ul>
       <hr>
       <div class="mt-3">
-        <a href="{% url 'worker_create' %}" class="btn btn-sm btn-outline-light w-100 mb-2">Tambah Pekerja</a>
-        <a href="{% url 'document_create' %}" class="btn btn-sm btn-outline-light w-100">Tambah Dokumen</a>
+        <a href="{% url 'worker_create' %}" class="btn btn-sm btn-outline-light w-100 mb-2">Tambah Pekerja & Dokumen</a>
+        <a href="{% url 'document_create' %}" class="btn btn-sm btn-outline-light w-100">Tambah Dokumen Saja</a>
       </div>
     </div>
   </div>
@@ -50,13 +49,12 @@
     <ul class="nav nav-pills flex-column">
       <li class="nav-item"><a class="nav-link text-white" href="{% url 'dashboard' %}">Dashboard</a></li>
       <li class="nav-item"><a class="nav-link text-white" href="{% url 'company_list' %}">Perusahaan</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="{% url 'worker_list' %}">Pekerja</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="{% url 'document_list' %}">Dokumen</a></li>
+      <li class="nav-item"><a class="nav-link text-white" href="{% url 'worker_list' %}">Pekerja & Dokumen</a></li>
     </ul>
     <hr>
     <div class="mt-3">
-      <a href="{% url 'worker_create' %}" class="btn btn-sm btn-outline-light w-100 mb-2">Tambah Pekerja</a>
-      <a href="{% url 'document_create' %}" class="btn btn-sm btn-outline-light w-100">Tambah Dokumen</a>
+      <a href="{% url 'worker_create' %}" class="btn btn-sm btn-outline-light w-100 mb-2">Tambah Pekerja & Dokumen</a>
+      <a href="{% url 'document_create' %}" class="btn btn-sm btn-outline-light w-100">Tambah Dokumen Saja</a>
     </div>
   </nav>
   <main class="content container-fluid p-3 p-lg-4 w-100">
